--- a/src/assets/css/files/wireframe-2.scss
+++ b/src/assets/css/files/wireframe-2.scss
@@ -33,3 +33,9 @@
     width:20px!important;
     height:20px!important;
 }
+.color-preview-text{
+    display:none!important;
+}
+#snipped-block{
+    display:none!important;
+}
